Fixed order of itineraries by adding order